--- a/mern/react/prueba1/package.json
+++ b/mern/react/prueba1/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "reactstrap": "^9.1.2"
   },
   "devDependencies": {},
   "scripts": {
