--- a/mern/mern/ejemplo1/client/package.json
+++ b/mern/mern/ejemplo1/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.3",
+    "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.4.27",
     "web-vitals": "^2.1.4"
   },
