--- a/mern/mern/ejemplo1/server/package.json
+++ b/mern/mern/ejemplo1/server/package.json
@@ -14,8 +14,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.5.1"
   }
 }
